fixed overflow again

--- a/project/_atoms.scss
+++ b/project/_atoms.scss
@@ -163,10 +163,6 @@ body {
    
     background-size: contain;
     position: relative;
-
-    .page-wrapper {
-        padding: 1rem;
-    }
 }
 
 img {
