--- a/project/_molecules.scss
+++ b/project/_molecules.scss
@@ -74,3 +74,8 @@
         grid-column: 1/3;
     }
 }
+
+.intro {
+    overflow: hidden;
+    position: relative;
+}
