--- a/project/style.css
+++ b/project/style.css
@@ -13,6 +13,7 @@
 * {
   margin: 0 auto;
   padding: 0;
+  box-sizing: border-box;
 }
 
 html {
@@ -34,9 +35,6 @@ body {
   background: url(beach_background.jpg) top center no-repeat;
   background-size: contain;
   position: relative;
-}
-body .page-wrapper {
-  padding: 1rem;
 }
 
 img {
@@ -257,6 +255,19 @@ div {
 @media (min-width: 800px) {
   .requirements > p {
     margin-left: 3rem;
+  }
+  .requirements > p:nth-of-type(1)::after {
+    background-image: url(sign_post.png);
+    display: block;
+    position: absolute;
+    left: 25%;
+    top: 200px;
+    background-repeat: no-repeat;
+    background-size: 100%;
+    width: 250px;
+    height: 500px;
+    content: "";
+    grid-column: 2/3;
   }
   .requirements > p:nth-of-type(2)::before {
     content: "1";
@@ -515,6 +526,11 @@ div {
     grid-column: 1/3;
   }
 }
+.intro {
+  overflow: hidden;
+  position: relative;
+}
+
 h2::before {
   content: "";
   background-image: url(yellow_umbrella_with_chairs.png);
